# cpp-labs

./: .gitignore  README.md
fd-inspector/: CMakeLists.txt  README.md
fd-inspector/demos/: fd_anon_state.cpp  fd_deleted_file.cpp  fd_exec.cpp  fd_leak.cpp  fd_many.cpp  fd_socket_leak.cpp  fd_sources.cpp
fd-inspector/ebpf/: fd_events.h  fd_leak_tracer.bpf.c  fd_leak_tracer.cpp
fd-inspector/include/: fd_inspector.hpp  unique_fd.hpp
fd-inspector/src/: fd_inspector.cpp  fd_inspector_internal.hpp  fd_util.cpp  leak_detector.cpp  main.cpp  output.cpp  proc_scan.cpp  socket_diag.cpp
fd-inspector/tests/: demo_regression.sh  ebpf_regression.sh  smoke.cpp
mem-map-viewer/: CMakeLists.txt  README.md
mem-map-viewer/demos/: cgroup_pressure.cpp  file_mapping.cpp  lazy_touch.cpp  mmap_leak.cpp  mprotect_flip.cpp  thread_stack_growth.cpp  tlb_thrash.cpp
mem-map-viewer/include/: mem_map_viewer.hpp  unique_fd.hpp
mem-map-viewer/src/: cgroup_observer.cpp  clear_refs.cpp  correlate.cpp  diff.cpp  fd_resolver.cpp  growth_detector.cpp  internal.hpp  json_parse.cpp  limits.cpp  main.cpp  numa.cpp  output.cpp  page_flags.cpp  pagemap.cpp  perf_sampler.cpp  proc_seed.cpp  reconcile.cpp  residency.cpp  tracer.cpp  uffd_tracer.cpp  util.cpp  vma_model.cpp  vma_model.hpp
mem-map-viewer/tests/: smoke.cpp
mini-strace/: CMakeLists.txt  README.md
mini-strace/demos/: attach_thread_on_input.cpp  eintr_read.cpp  epoll_ops.cpp  exec_cloexec.cpp  fd_state_edges.cpp  file_ops.cpp  fork_tree.cpp  futex_wait.cpp  hello_syscalls.cpp  io_latency.cpp  mmap_ops.cpp  network_trace.cpp  openat2_ops.cpp  poll_ops.cpp  process_resource.cpp  seccomp_errno.cpp  signal_delivery.cpp  signaled_exit.cpp  socket_lifecycle.cpp  state_escape.cpp  syscall_loop.cpp  threaded_writes.cpp
mini-strace/include/: mini_strace.hpp  unique_fd.hpp
mini-strace/src/: attach.cpp  decode_file.cpp  decode_memory.cpp  decode_net.cpp  decode_poll_epoll.cpp  decode_process.cpp  decode_seccomp.cpp  decoder.cpp  decoder_internal.hpp  deny_explainer.cpp  event_pipeline.cpp  injection.cpp  internal.hpp  io_latency.cpp  lifecycle.cpp  main.cpp  memory_reader.cpp  net_trace.cpp  output.cpp  process_trace.cpp  seccomp.cpp  state.cpp  summary.cpp  syscall_table.cpp  trace_loop.cpp  tracer.cpp  tracer_internal.hpp
mini-strace/tests/: benchmark_smoke.sh  json_schema_smoke.sh  smoke.cpp
